Fix text wrap in pre tag

--- a/source/stylesheets/_compliance.scss
+++ b/source/stylesheets/_compliance.scss
@@ -233,6 +233,11 @@ $border-color: #f6f9ff;
     margin: 0 0 25px 0;
   }
 
+  pre {
+    white-space: pre-wrap;
+    word-wrap: break-word;
+  }
+
   li {
     margin-bottom: 10px;
   }
